--- a/package.json
+++ b/package.json
@@ -2,16 +2,31 @@
   "name": "trampdb",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
+    "@types/leaflet-gpx": "^1.3.3",
     "@types/node": "^16.11.26",
+    "@types/proj4": "^2.5.2",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "draft-js-export-html": "^1.4.1",
+    "leaflet": "^1.7.1",
+    "leaflet-gpx": "^1.7.0",
+    "proj4": "^2.8.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
+    "react-bootstrap-icons": "^1.8.1",
     "react-dom": "^17.0.2",
+    "react-draft": "^0.0.0",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-leaflet": "^3.2.5",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
@@ -39,5 +54,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/draft-js": "^0.11.9",
+    "@types/leaflet": "^1.7.9",
+    "@types/react-draft-wysiwyg": "^1.13.4"
   }
 }
