--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "dompurify": "^2.3.6",
     "draft-js-export-html": "^1.4.1",
     "leaflet": "^1.7.1",
     "leaflet-gpx": "^1.7.0",
@@ -56,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/dompurify": "^2.3.3",
     "@types/draft-js": "^0.11.9",
     "@types/leaflet": "^1.7.9",
     "@types/react-draft-wysiwyg": "^1.13.4"
