--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "leaflet": "^1.7.1",
     "leaflet-gpx": "^1.7.0",
     "proj4": "^2.8.0",
+    "rc-slider": "^10.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-bootstrap-icons": "^1.8.1",
@@ -29,6 +30,7 @@
     "react-leaflet": "^3.2.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-select": "^5.3.2",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
